[package]
name = "weld"
version = "0.1.0"
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]

[dependencies]
gleam = "0.4.7"
glutin = "0.9.0"
euclid = "0.15.1"
snowflake = "1.2"
rand = "0.3"
log = "0.3"
futures = "0.1.14"
tokio-core = "0.1.4"

[dependencies.webrender]
git = "https://github.com/servo/webrender"
rev = "f6d81d9349823cf89e2ccb1d3b2166918818db1b"

[dependencies.yoga]
git = "https://github.com/passy/yoga-rs-1"
rev = "3e524d7f0fbc64753ec93bc459ac4072c0e6fa0b"

[dev-dependencies]
pretty_env_logger = "0.1"
